--- a/styles/icons.styl
+++ b/styles/icons.styl
@@ -12,25 +12,25 @@ iconFont('../css/font', 'fontello')
   font-family: "fontello"
   display: inline-block
 
-.ico.sort
-  .ico.up:before
-    content "\e824"
-  .ico.down:before
-    content "\e827"
+.ico.toggle:before
+  content "\e84a"
+.ico.up:before
+  content "\e824"
+.ico.down:before
+  content "\e827"
 
-.ico.filter
-  .title:before
-    content: "\e809"
-  .date:before
-    content: "\e81d"
-  .url:before
-    content: "\e80b"
-  .host:before
-    content: "\e866"
-  .path:before
-    content: "\e861"
-  .protocol:before
-    content: "\e86a"
+.title:before
+  content: "\e809"
+.date:before
+  content: "\e81d"
+.url:before
+  content: "\e80b"
+.host:before
+  content: "\e866"
+.path:before
+  content: "\e861"
+.protocol:before
+  content: "\e86a"
 
 .ico.find:before
   content: "\e800"
@@ -59,7 +59,6 @@ icoActive(a,b)
 .kids-0 > .ico.dir
   icoActive('\e83e', '\e83e')
 
-// .kid:before
-//   font-family: "fontello"
-//   display: inline-block
-//   content: '\e830'
+
+.ico.big:before
+  font-size: step
