--- a/styles/nav.styl
+++ b/styles/nav.styl
@@ -1,44 +1,10 @@
-.nav
-  position: relative
-  padding step
-  box-shadow 1px 0 0 lighten(brdClr,20)
-
-form.hslColors
-  rd()
-  display: flex
-  padding-top: sz(4,'*')
-  box-shadow: 0 0 0 1px brdClr
-  overflow: hidden
-  word-spacing -3px
-  vertical-align: bottom
-  select
-    btn()
-    flex 1
-    box-shadow: 0 0 0 1px darken(brdClr,10)
-    &:first-child
-      border-radius 0 0 0 3px
-    &:last-child
-      border-radius 0 0 3px 0
-
-
 input[type="text"], input[type="number"]
-  flex 2
-  background: #fff
-  padding: 0 sz(2)
-  box-shadow: 0 0 0 1px brdClr
-  lh(2,'*')
+  background: #fff imp
+  text-align: left
 
 .btn-group
   display: flex
-  word-spacing -3px
-  vertical-align: middle
 
-  button, input[type="radio"], input[type="checkbox"]
-    btn()
-    flex 1
   button, input
-    box-shadow: 0 0 0 1px darken(brdClr,10)
-    &:first-child
-      radLeft()
-    &:last-child
-      radRight()
+    btn()
+    brd()
