--- a/styles/utils/vars.styl
+++ b/styles/utils/vars.styl
@@ -1,12 +1,20 @@
-step = 18px
+step = 16px
+
 txtClr = #333
+bgClr = #eee
+
+_txt = #555
+
+_ca = salmon
+_green1 = palegreen
+_green2 = mediumaquamarine
+_green3 = darkseagreen
+
+// _cAlt = saturate(_cb, 10)
 
 actClr = paleturquoise
 
-bgClr = #eee
-btnClr = #fff
+btnClr = crimson
 
-// btnBgClr = darkseagreen
-// btnBgClr = darkslateblue
 brdClr = darksalmon
 btnBgClr = brdClr
