--- a/views/tree.jade
+++ b/views/tree.jade
@@ -1,2 +1,5 @@
-//- -if(node.id)
-//-   li(id=node.id)
+//- form.ico.btn-group
+//-   input(type="checkbox", name="toggle", class="ico box-6 toggle")
+//-   input(type="radio", name="sort", class="ico box-3 up")
+//-   input(type="radio", name="sort", class="ico box-3 down")
+ol.tree
