--- a/styles/utils/shortcuts.styl
+++ b/styles/utils/shortcuts.styl
@@ -14,6 +14,18 @@ bg()
   background: arguments || #fff
 
 ///////////////////////////////// Scroll
+
+ellipsis()
+
+  if arguments
+    display: block
+    max-width: 100%
+
+  white-space: nowrap
+  text-overflow: ellipsis
+  overflow: hidden
+
+///////////////////////////////// Scroll
 scrollY()
   overflow-x: hidden
   overflow-y: auto
@@ -24,6 +36,7 @@ scrollX()
 
 
 ///////////////////////////////// Radius
+
 rd(n = 3px)
   border-radius n
 
