need to remove palette module

--- a/styles/icons.styl
+++ b/styles/icons.styl
@@ -36,7 +36,8 @@ iconFont('../css/font', 'fontello')
   content: "\e800"
 
 .ico.remove:before
-  content: "\e816"
+  // content: "\e816"
+  content: "\e873"
 .ico.edit:before
   // content: "\e864"
   content: "\e819"
