--- a/views/search.jade
+++ b/views/search.jade
@@ -1,10 +1,3 @@
-form.btn-group
-  input(type="text", class="big grow box-6")
-
-  each i in ["date","url","host","path","protocol"]
-    input(type="radio", name="filter", class="ico " + i, value=i)
-
-
-//- div.ico.btn-group.sort
-//-   button(class="ico up")
-//-   button(class="ico down")
+input#find(type="text", class="big grow box-6")
+each i in ["date","url","host","path","protocol"]
+  input(type="radio", name="filter", class="ico " + i, value=i)
