--- a/styles/layout.styl
+++ b/styles/layout.styl
@@ -1,19 +1,10 @@
-
-.layout
+.layout, .flex
   display flex
 .layout.base
   flex-basis:12
-
 .row, .col, .layout
-  box-shadow 0 0 0 1px lighten(brdClr,20)
-
-.row
   display flex
+.row
   flex-direction: row
 .col
-  display flex
   flex-direction: column
-
-doFlex(1,12)
-.pad
-  padding sz(2)
