--- a/styles/utils/vars.styl
+++ b/styles/utils/vars.styl
@@ -1,20 +1,120 @@
 step = 16px
 
-txtClr = #333
-bgClr = #eee
-
-_txt = #555
-
-_ca = salmon
+_green  = #bada55
 _green1 = palegreen
 _green2 = mediumaquamarine
 _green3 = darkseagreen
 
-// _cAlt = saturate(_cb, 10)
+_red  = salmon
+_red1 = coral
+_red2 = tomato
+_red3 = darksalmon
+_red4 = crimson
 
+_blue = navy
+_blue1 = skyblue
+_blue2 = lightsteelblue
+_blue3 = royalblue
+
+_txt  = #555
+_link  = #555
+_border  = #555
+_bg  = #555
+_btn  = #555
+_btn  = #555
+
+txtClr = _txt
+bgClr  = #eee
 actClr = paleturquoise
 
-btnClr = crimson
-
-brdClr = darksalmon
+btnClr   = crimson
+brdClr   = darksalmon
 btnBgClr = brdClr
+
+// $gray-1 = lighten(#000, 30)
+// $gray-2 = lighten(#000, 40)
+// $gray   = lighten(#000, 50)
+// $gray-3 = lighten(#000, 60)
+// $gray-4 = lighten(#000, 70)
+
+// // Brand colors
+// // -------------------------
+
+// $prime  =  #428bca
+// $ok     =  #5cb85c
+// $warn   =  #f0ad4e
+// $danger =  #d9534f
+// $info   =  #5bc0de
+
+// // Scaffolding
+// // -------------------------
+
+// $body = #fff
+// $text = $gray-dark
+
+// $link =       $primary
+// $link-hover = darken($link, 15)
+
+// // Typography
+// // -------------------------
+
+// $fnt-sans      =  "Helvetica Neue", Helvetica, Arial, sans-serif
+// $fnt-serif     =  Georgia, "Times New Roman", Times, serif
+// $fnt-monospace =  Monaco, Menlo, Consolas, "Courier New", monospace
+// $fnt-base      =  $fnt-sans
+
+// $fz-base  = 14px
+// $fz-large = ceil($fz-base * 1.25) // ~18px
+// $fz-small = ceil($fz-base * 0.85) // ~12px
+
+// $active-bg        = $prime
+// $tbl-bg           = transparent
+// $tbl-bg-accent    = #f9f9f9
+// $tbl-bg-hover     = #f5f5f5
+// $tbl-bg-active    = $tbl-bg-hover
+// $tbl-border-color = #ddd
+
+// $btn-color  = #333
+// $btn-bg     = #fff
+// $btn-border = #ccc
+
+// $btn-def-color  = #fff
+// $btn-def-bg     = $prime
+// $btn-def-border = darken($btn-bg, 5)
+
+// $btn-ok-color   = #fff
+// $btn-ok-bg      = $ok
+// $btn-ok-border  = darken($btn-ok-bg, 5)
+
+// $btn-warn-color  = #fff
+// $btn-warn-bg     = $warn
+// $btn-warn-border = darken($btn-warn-bg, 5)
+
+// $btn-danger-color =               #fff
+// $btn-danger-bg =                  $danger
+// $btn-danger-border =              darken($btn-danger-bg, 5%)
+
+// $btn-info-color  = #fff
+// $btn-info-bg     = $info
+// $btn-info-border = darken($btn-info-bg, 5%)
+// $btn-link-disabled-color =        $gray-light
+
+
+// // Forms
+// // -------------------------
+
+// $inp-bg =                       #fff
+// $inp-bg-disabled =              $gray-5
+// $inp-border =                   #ccc
+// $inp-border-focus =             #66afe9
+// $inp-color-placeholder =        $gray-4
+
+
+// // Navbar links
+// $nav-color =           #777
+// $nav-hover-color    =  #333
+// $nav-hover-bg       =  transparent
+// $nav-active-color   =  #555
+// $nav-active-bg      =  darken($navbar-bg, 10%)
+// $nav-disabled-color =  #ccc
+// $nav-disabled-bg    =  transparent
