--- a/views/editor.jade
+++ b/views/editor.jade
@@ -1,8 +1,14 @@
-form.btn-group.col
-  input.title(type="text")
-  input.url(type="text")
+  //- nav.btn-group
+  //-   a.box-1(href="#search") search
+  //-   a.box-1(href="#editor") editor
+  //-   a.box-1(href="#colors") colors
 
-form.btn-group
-  button.ico.box-4.save
-  button.ico.box-4.remove
-  button.ico.box-4.cancel
+  //- div.tab#search
+  //-   include search
+  //-   include tree
+
+  //- div.tab#editor
+  //-   include editor
+
+  //- div.tab#colors
+  //-   include colors
