--- a/views/index.jade
+++ b/views/index.jade
@@ -8,27 +8,25 @@ html
     title Bookmark Manager
     link(rel="stylesheet", href="css/main.css")
 
-  body.layout.base.row
+  body
+    header
+      form.btn-group#search
+        input(type="text", id="find")
+        each i in ["date","url","host","path","protocol"]
+          input(type="radio", name="filter", class="ico " + i, value=i)
 
-    //- div.layout.row.wrap.box-1
+      div.btn-group#editbox
+        input.title(type="text")
+        input.url(type="text")
+        button.ico.save
+        button.ico.remove
 
-    div.col.box-2#root
-      include tree
+    nav
+      a(href="#root", class="btn") root
+      a(href="#stage", class="btn") stage
 
-    div.col.box-8
-
-      nav.btn-group
-        a.box-1(href="#search") search
-        a.box-1(href="#editor") editor
-        a.box-1(href="#colors") colors
-
-      div.tab#search
-        include search
-
-      div.tab#editor
-        include editor
-
-      div.tab#colors
-        include colors
+    section.tabs.row
+      ol(id="root", class="tree")
+      ol(id="stage", class="tree")
 
     script(data-main="js/main", src="js/lib/require.js")
