user edit actions

--- a/styles/icons.styl
+++ b/styles/icons.styl
@@ -35,8 +35,12 @@ iconFont('../css/font', 'fontello')
 .ico.find:before
   content: "\e800"
 
+.ico.bEdit:before
+  content: "\e864"
+.ico.bRemove:before
+  content: "\e873"
+
 .ico.remove:before
-  // content: "\e816"
   content: "\e873"
 .ico.edit:before
   // content: "\e864"
