--- a/styles/nav.styl
+++ b/styles/nav.styl
@@ -30,6 +30,9 @@ nav
   a
     _baseBtn:2
     box-shadow: 1px 0 0 #ccc
+    text-align: left
+    width: 50%
+
 
 button, input[type="checkbox"]:not(.dir), input[type="radio"]
   _baseBtn: 2
@@ -59,3 +62,6 @@ select
 
 #editbox
   margin:0 step
+  .remove
+    bg: _red
+    box-shadow 0 0 0 1px _red2
