--- a/styles/tree.styl
+++ b/styles/tree.styl
@@ -1,3 +1,4 @@
+
 .tree
   padding: step
   box-sizing: border-box
@@ -20,22 +21,38 @@
       box-sizing: border-box
       border-color: tan
     span
-      ellipsis: 1
-      &:hover
+      ellipsis()
+    &:hover
+      > span
         bg: #eee
-        ~ b
-          opacity: 1
+      > b
+        padding: 0 sz(2)
+        width: auto
+        opacity: 1
+        z-index: 999
+      > .bEdit
+          margin-right: sz(2)
+      > .bRemove
+          margin-left: sz(2)
+
     b
+      position: relative
+      transition all .4s
+      width: 0
       opacity: 0
-      pos: top 0, right 0
-      z-index: 999
+      display: inline-block
       cursor: pointer
-      padding: sz(4)
+      color: #fff
+      border-radius 3px
+
+    .bEdit
+      bg: _green2
+      &:hover
+        bg: darken(_green2, 20)
+    .bRemove
       bg: _red
       &:hover
-        opacity: 1
-
-
+        bg: darken(_red, 20)
 
   li.kid:before
     width: sz()
@@ -56,7 +73,7 @@
     pos: top 0, left 0
     lh:1
     width: 100%
-    z-index: 99
+
     &:before
       color: brdClr
 
@@ -69,3 +86,5 @@
           order 3
       > .kids-0
           order 2
+  .modified
+    color: darken(_green2, 10)
