--- a/views/index.jade
+++ b/views/index.jade
@@ -15,11 +15,11 @@ html
         each i in ["date","url","host","path","protocol"]
           input(type="radio", name="filter", class="ico " + i, value=i)
 
-      div.btn-group#editbox
-        input.title(type="text")
-        input.url(type="text")
-        button.ico.save
-        button.ico.remove
+      //- div.btn-group#editbox
+      //-   input.title(type="text")
+      //-   input.url(type="text")
+      //-   button.ico.save
+      //-   button.ico.remove
 
     nav
       a(href="#root", class="btn") root
